<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AgregarTarea">

    <TextView
        android:id="@+id/txtNomTareaSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="9dp"
        android:textSize="20dp"
        android:layout_marginBottom="116dp"
        android:text="@string/nombre_tarea"
        app:layout_constraintBottom_toTopOf="@+id/btnRegresar"
        app:layout_constraintEnd_toStartOf="@+id/txtTareaNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTareaNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="106dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/agregue_tarea"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnRegresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNomTareaSet"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="14dp"
        android:text="@string/guardar"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRegresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegresar" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="486dp"
        android:text="@string/atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGuardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomTareaSet" />
</androidx.constraintlayout.widget.ConstraintLayout>